[metadata]
name = dpcontracts
version = 0.6.0
author = attr: dpcontracts.__author__
author_email = attr: dpcontracts.__email__
description = A simple implementation of contracts for Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/deadpixi/contracts
license = https://www.gnu.org/licenses/lgpl.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries

[options]
packages = dpcontracts
python_requires = >= 3.5
